homepage error correction

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
   <header>
     <nav>
-      <a href=" #"> Home</a>
-      <a href="wwr/">
-        <Rafting Website</a>
+      <a href="#">Home</a>
+      <a href="wwr"><Rafting site</a>
     </nav>
   </header>
   <main>
@@ -21,8 +20,7 @@
     <p>Hello! My name is Janet Agyapong and I am from Accra, Ghana. I enjoy reading and singing</p>
   </main>
   <footer>
-    <p>© 2025 🌴 Janet Agyapong 🌴 Accra
-    <p>
+    <p>© 2025 🌴 Janet Agyapong 🌴 Accra</p>
   </footer>
 </body>
 
