last edit for my homepage

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en-Us">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width',initial-scal e=1.0.">
-  <title>Agyapong Janet|WDD 130</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agyapong Janet | WDD 130</title>
 </head>
 
 <body>
   <header>
     <nav>
       <a href="#">Home</a>
-      <a href="wwr"><Rafting site</a>
+      <a href="wwr">Rafting Site</a>
     </nav>
   </header>
   <main>
-    <h1> Janet Agyapong | WDD 130</h1>
-    <img src="images/profile.jpg" alt="Hello, my name is Janet Agyapong" width="200">
-    <p>Hello! My name is Janet Agyapong and I am from Accra, Ghana. I enjoy reading and singing</p>
+    <h1>Janet Agyapong | WDD 130</h1>
+    <img src="images/profile.jpg" alt="Photo of Janet Agyapong" width="200">
+    <p>Hello! My name is Janet Agyapong and I am from Accra, Ghana. I enjoy reading and singing.</p>
   </main>
   <footer>
     <p>© 2025 🌴 Janet Agyapong 🌴 Accra</p>
