--- a/week03/overlay.html
+++ b/week03/overlay.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <title>link</title> 
-</head><main>
+</head>
+<main>
 	<h1>CSS Layout: Position Absolute</h1>
 	<div class="herodiv">
 		<img src="https://churchofjesuschristtemples.org/assets/img/temples/salvador-brazil-temple/salvador-brazil-temple-51668-main.jpg" alt="Placeholder image" width="700" height="300">
