my last check in

--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -2,12 +2,14 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device, initial-scales">
-    <title>Wireframe practice </title>
+    <meta name="viewport" content="width=device, initial-scales 3.0 ">
+    <title>Wireframe 2 HTML</title>
   </head>
   <body>
     <header>
-        <img src="" alt="">
+      <div> class"logo-box">
+        <img src="z-rapids-trees.jpg" alt="logo">
+        </div>
         <nav>
            <a href="#">Home</a>
            <a herf="#">Link</a>
@@ -16,6 +18,11 @@
         </nav>
     </header>
     <main>
+       <div id="banner-box">
+          <section class="banner">
+            
+          </section>
+       </div>
     </main>
     <footer>
     </footer>
