--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -8,19 +8,19 @@
   <body>
     <header>
       <div> class"logo-box">
-        <img src="z-rapids-trees.jpg" alt="logo">
+        <img src="images/z-rapids-trees.jpg" alt="logo">
         </div>
         <nav>
            <a href="#">Home</a>
-           <a herf="#">Link</a>
-           <a herf="#">Link</a>
-           <a herf="#">Link</a>
+           <a herf="#">About</a>
+           <a herf="#">Contact Us</a>
+           <a herf="#">Terms of Services</a>
         </nav>
     </header>
     <main>
        <div id="banner-box">
           <section class="banner">
-            
+
           </section>
        </div>
     </main>
