checking in for update

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/raftinglogo.png" alt="Rapids Rafting Logo" width="200">
+        <img src="images/z-rapids-trees.jpg" alt="Rapids Rafting Logo" width="200">
         <nav>
             <a href="index.html" class="active"> Home</a>
             <a href="about.html"> About Us</a>
@@ -67,8 +67,8 @@
 <p><a href="images/home_wireframe.pdf" target="_blank">View Home Page Wireframe</a></p>
 <nav class="sociallinks">
 <p>@2025💞 Rapids Rafting Co 💞 Janet Agyapong 💞 Tema,Ghana 💞 </p>
-<a href="https://facebook.com">
- <img scr="images/1_Facebook_colored_svg_copy-64.webp" width="20" alt="Facebook"></a>
+<a href="https://Facebook.com">
+    <img scr="images/Facebook_logo.jpg" width="20" alt="Facebook"></a>
 <a href="https://x.com">
     <img src="images/th.webp" width="20" alt="Twitter"></a>
     <a href="ttps://instagram.com">
