--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="home page for Rapids Rafting Website">
     <meta name="Janet Agyapong">
+    <meta name="author">
     <title> Rapids Rafting Company-Home Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" herf="https://fonts.googleapis.com">
