i am pushing to see my updates

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,8 +16,8 @@
     <header>
         <img src="images/z-rapids-trees.jpg" alt="Rapids Rafting Logo" width="200">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
@@ -28,9 +28,9 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-text">
-                <h1>Join Us For An Unforgetable Moment❤</h1>
+                <h1>Welcome To Our Trip!</h1>
             </div>    
-            <img src="images/happy_smiling_client.jpg" alt="Rafting Experience">
+            <img src="images/rafting19_600.jpg" alt="Rafting Experience">
         </section>
 
         <!-- Newsletter Section -->
@@ -60,13 +60,13 @@
         <section class="grid-layout">
             <!-- Grid Item 1 -->
             <div class="grid-item">
-                <img src="images/rafting27_1024L.jpg" alt="Rafting Objective">
+                <img src="images/rafting29_600.jpg" alt="Rafting Objective">
                 <p>Experience the objective of our rafting adventure and enjoy unforgettable moments in life!</p>
             </div>
 
             <!-- Grid Item 2 -->
             <div class="grid-item">
-                <img src="images/rafting42_600.jpg" alt="Rafting Offering">
+                <img src="images/rafting64_600.jpg" alt="Rafting Offering">
                 <p>Explore various trips and offerings for adrenaline seekers—from beginners to seasoned adventurers.</p>
             </div>
         </section>
