--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,12 @@
     <header>
         <img src="images/z-rapids-trees.jpg" alt="Rapids Rafting Logo" width="200">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -29,69 +31,56 @@
         <section class="hero">
             <div class="hero-text">
                 <h1>Join Us For An Unforgetable Moment❤</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit...</p>
             </div>    
             <img src="images/happy_smiling_client.jpg" alt="Rafting Experience">
         </section>
 
-        <!-- Newsletter Section -->
-        <section class="newsletter">
-            <h2>Sign Up For Our Newsletter</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>   
-                <input type="email" id="email" name="email" required>
-
-                <button type="submit">Sign Up</button>
-            </form>
-        </section>
-
-        <!-- Call to Action Section -->
-        <section class="cta">
-            <h2>Plan Your Next Adventure With Us!</h2>
-            <div class="banner">
-                <a href="trips.html" class="cta-button">Visit Trips Page</a>
-                <p>Discount 50%!</p>
+        <!-- History Section -->
+        <section class="history">
+            <h2>History</h2>
+            <div class="history-content">
+                <div class="history-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                </div>
+                <img src="images/lapalm_royal.jpg" alt="History Image">
+                <div class="history-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                </div>
             </div>
         </section>
 
-        <!-- Grid Layout Section -->
-        <section class="grid-layout">
-            <!-- Grid Item 1 -->
-            <div class="grid-item">
-                <img src="images/rafting27_1024L.jpg" alt="Rafting Objective">
-                <p>Experience the objective of our rafting adventure and enjoy unforgettable moments in life!</p>
-            </div>
-
-            <!-- Grid Item 2 -->
-            <div class="grid-item">
-                <img src="images/rafting42_600.jpg" alt="Rafting Offering">
-                <p>Explore various trips and offerings for adrenaline seekers—from beginners to seasoned adventurers.</p>
+        <!-- Adventure Awaits Section -->
+        <section class="adventure-awaits">
+            <h2>Adventure Awaits You</h2>
+            <div class="adventure-grid">
+                <!-- Grid Items -->
+                <div class="grid-item">
+                    <img src="images/trip2.jpg" alt="Adventure 1">
+                    <p>Be bold</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/trip3.jpg" alt="Adventure 2">
+                    <p>Peaceful</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/trip1.jpg" alt="Adventure 3">
+                    <p>Drama</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/rafting13_1024L.jpg" alt="Adventure 4">
+                    <p>Breathtaken</p>
+                </div>
             </div>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <!-- Wireframe Link -->
-        <p><a href="images/home_wireframe.pdf" target="_blank">View Home Page Wireframe</a></p>
-
-        <!-- Social Links -->
-        <nav class="social-links">
-            <p>&copy; 2025 💞 Rapids Rafting Co 💞 Janet Agyapong 💞 Tema, Ghana 💞</p>
-
-            <!-- Social Media Icons -->
-            <a href="https://facebook.com">
-                <img src="images/facebook_logo.jpg" width="20" alt="Facebook">
-            </a>
-            <a href="https://x.com">
-                <img src="images/twitter_logo.jpg" width="20" alt="Twitter">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram_logo.jpg" width="20" alt="Instagram">
-            </a>   
-        </nav>   
-    </footer>
-</body>
-</html>
+        <!-- Footer Content -->
+        <nav class="footer-nav">
+            <!-- Social Media Links -->
+            © 2025 Rapids Rafting Co | Janet Agyapong | Tema, Ghana
+            <!-- Social Icons -->
+            Follow us:
+            <a href="#" aria-label="Facebook"><img src="/facebook.png"></footer></body></html.
