--- a/wwr/about.html
+++ b/wwr/about.html
@@ -78,9 +78,9 @@
     <!-- Footer Section -->
     <footer>
         <!-- Footer Content -->
-        <nav class="footer-nav">
+        <nav class="footer-nav"></nav>
             <!-- Social Media Links -->
             © 2025 Rapids Rafting Co | Janet Agyapong | Tema, Ghana
             <!-- Social Icons -->
             Follow us:
-            <a href="#" aria-label="Facebook"><img src="/facebook.png"></footer></body></html.
+            <a href="#" aria-label="Facebook"><img src="/facebook.png"></a>  alt= "follow us"</footer></body></html.
