--- a/wwr/about.html
+++ b/wwr/about.html
@@ -83,4 +83,8 @@
             © 2025 Rapids Rafting Co | Janet Agyapong | Tema, Ghana
             <!-- Social Icons -->
             Follow us:
-            <a href="#" aria-label="Facebook"><img src="/facebook.png"></a>  alt= "follow us"</footer></body></html.
+            <a href="#" aria-label="Facebook">
+            <img src="image/facebook.png" alt= "facebook"
+    </footer>
+</body>
+</html>.
