--- a/wwr/Contect.html
+++ b/wwr/Contect.html
@@ -17,9 +17,9 @@
         <img src="images/z-rapids-trees.jpg" alt="Rapids Rafting Logo" width="200">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html"class="active">Contact</a>
         </nav>
     </header>
 
