--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <!-- logo for Rapids Rafting co -->
-        <img src="images/rafinglogo.png" alt="Rapids Rafting Logo" width="200">
+        <img src="images/z-rapids-trees.jpg" alt="Rapids Rafting Logo" width="200">
         <!-- Navigation menu -->
         <nav>
             <a href="index.html">Home</a>
@@ -94,9 +94,9 @@
     <footer>
         <p><a href="images/trips_wireframe.pdf" target="_blank">View Trips Page Wireframe</a></p>
         <nav class="sociallinks">
-            <p>©2024 💕 Rapids Rafting Co 💕 Janet Agyapong 💕 Tema, Ghana 💕</p>
+            <p>©2025 💕 Rapids Rafting Co 💕 Janet Agyapong 💕 Tema, Ghana 💕</p>
             <a href="https://facebook.com">
-                <img src="images/1_Facebook_colored_svg_copy-64.webp" width="20" alt="Facebook"></a>
+                <img src="images/facebook_logo.jpg" width="20" alt="Facebook"></a>
             <a href="https://x.com">
                 <img src="images/th.webp" width="20" alt="Twitter"></a>
             <a href="https://instagram.com">
