--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -133,10 +133,7 @@
             <div class="contact-info">
                 <h2>Our Location</h2>
                 <!-- Embedded Google Map -->
-                <iframe src="<iframe src="
-                    https://google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.931853757853!2d-0.4716953258566627!3d5.427323734931946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdfb798831496c3%3A0x8c73c828d5d55ac9!2sWhite%20Sands%20Beach%20Resort%20%26%20Spa%20Ghana!5e0!3m2!1sen!2sgh!4v1744301481226!5m2!1sen!2sgh"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <img src="images/office-map.png" alt="rapidsrafting whitesand office">
             </div>
         </section>
     </main>
