--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,32 +52,27 @@
             <!-- Subheading -->
             <h2>HISTORY</h2>
             <!-- Paragraph describing the company's history -->
-            <p>In 2020, after the Covid pandemic, a small group of entrepreneurs and white water rafting enthusiasts
-                came together to commence what has grown to become, Rapids Rafting Co. It all begun as
-                a pastime, but has now grown to be a semblance of a club of a modest 504 clientelles from 10 countries.
-                We pride ourselves in knowing each member of our growing patrons as part of the RAPIDS family. The
-                rafting business is our passion and we strive to ignite the same in you from your next journey with us.
-                Here are two more things that set Rapids Rafting apart:
-                Unique Clientele: Our focus on small group sizes and personalized experiences fosters a sense of
-                community on the river. Unlike impersonal mass rafting companies, you'll feel like you're paddling with
-                friends.
-                Local Expertise: Our guides are not just rafting enthusiasts, they are local experts who are passionate
-                about sharing their knowledge of the area's history, geography, and wildlife.</p>
+            <p>Rapid Rafting Co., born from a post-pandemic vision in 2020, has evolved from a passionate pastime into
+                an adventurous community. We've cultivated a vibrant network of 504 thrill-seekers from 10 countries,
+                fostering a "RAPIDS family" spirit. We don't just offer rafting; we ignite a passion for the river. Our
+                unique approach emphasizes:
+
+                Intimate Expeditions: Small groups and personalized experiences create a strong sense of camaraderie,
+                turning every trip into a shared adventure.
+                Local Navigator's: Our guides are more than experts; they're storytellers, weaving tales of local
+                history, geography, and wildlife into your journey Expect exhilarating excitement and suspense on your
+                journey!.</p>
             <figure>
                 <img src="images/happy_smiling_client.jpg" alt="smiling-Client">
             </figure>
-            <p>Ask some of our past adventurers on a Rapids Rafting booking and you will be amazed at how much they rate
-                us professionally and socially. We go the extra mile to please.
-                Here are just a few reasons to choose Rapids Rafting for your next adventure:
-                Unforgettable Experience: We provide thrilling whitewater rafting trips that cater to all experience
-                levels, from families looking for a gentle float to adrenaline-seeking adventurers.
-                Expert Guides: Our certified guides are passionate about rafting and committed to your safety and
-                enjoyment on the river.
-                Beautiful Scenery: Our rafting trips take place on stunning rivers with breathtaking views of nature.
-                Top-notch Safety: We prioritize safety and use top-of-the-line equipment and follow strict safety
-                protocols.
-                Memorable Adventure: We create lasting memories that you will cherish for years to come.
-                Book your Rapids Rafting adventure today and experience the thrill of whitewater rafting!
+            <p> Dive into an adventure whispered about by those who've dared: Rapids Rafting. Our past adventurers rave
+                about the unforgettable journeys we craft. Why?
+                Tailored Thrills: From gentle floats to adrenaline-pumping rapids, we cater to every explorer's heart.
+                Expert Navigators: Our passionate, certified guides ensure your safety and amplify your enjoyment.
+                Scenic Escapes: Immerse yourself in breathtaking natural beauty as you conquer stunning rivers.
+                Unwavering Safety: We prioritize your well-being with top-tier equipment and rigorous protocols.
+                Lasting Legends: We forge memories that will echo in your stories for years to come.
+                Book your Rapids Rafting adventure and become part of the legend!>
             </p>
             <!-- Adventure section -->
             <!-- Subheading -->
@@ -111,7 +106,7 @@
         <nav class="sociallinks">
             <p>©2025 💕 Rapids Rafting Co 💕 Janet Agyapong 💕 Tema, Ghana 💕</p>
             <a href="https://facebook.com">
-                <img src="images/facebook_logo.jpg" width="20" alt="Facebook"></a>
+                <img src="images/facebook_logo.jpg" width="20" alt="facebook"></a>
             <a href="https://x.com">
                 <img src="images/th.webp" width="20" alt="Twitter"></a>
             <a href="https://instagram.com">
