--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,7 +31,7 @@
         <!-- Hero section -->
         <div class="hero">
             <!-- Background image -->
-            <h1 class="rivers">Join Us For An Unforgetable Moment❤!</h1>
+            <h1 class="rivers">Join Us For Iconic Moment❤!</h1>
             <img src="images/hero_transparency_1024L.png" alt="RAPIDS RAFTING EXPERIENCE">
             <!-- Article section -->
             <article>
@@ -81,23 +81,23 @@
         <section class="gallery">
             <figure>
                 <img src="images/rafting18_600.jpg" alt="Rafting1">
-                <figcaption>Unforgettable and Breathtaking scenery</figcaption>
+                <figcaption>breathtaking!</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting19_600.jpg" alt="Rafting2">
-                <figcaption>Come Enjoy The Beauty of Nature!</figcaption>
+                <figcaption>Fascinating!</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting42_600.jpg" alt="Rafting3">
-                <figcaption>Cool off after a Hilarious Outing</figcaption>
+                <figcaption>Stressfree</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting7_600.jpg" alt="Rafting4">
-                <figcaption>Enjoying Nature's Tapestry</figcaption>
+                <figcaption>Dramatic Moment</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting1_600.jpg" alt="Rafting5">
-                <figcaption>The Ultimate Experience</figcaption>
+                <figcaption>The Senes Of Humor</figcaption>
             </figure>
         </section>
     </main>
